# vibeharness

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  MANIFEST.in  Makefile  NOTICE  README.md  README.zh-CN.md  ROADMAP.md  ROADMAP.zh-CN.md  SECURITY.md  install.sh  pyproject.toml
.claude/commands/: vh-audit.md  vh-recovery.md
.cursor/rules/: vibeharness.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  intervention_episode.yml
.github/workflows/: validate.yml
.openhands/microagents/: vibeharness.md
.vibeharness/: config.json  i18n.json
.vibeharness/templates/: decision_contract.md
benchmark/: README.md  README.zh-CN.md  metrics.md  metrics.zh-CN.md  schema.json  scoring_rubric.md  scoring_rubric.zh-CN.md
benchmark/tasks/seed/: environment_bootstrap_notes_fixture.json  environment_bootstrap_service.json  spec_capture_clarification.json  (+2 more)
docs/: agent_adapters.md  agent_adapters.zh-CN.md  codex_install.md  codex_install.zh-CN.md  episode_collection.md  episode_collection.zh-CN.md  evaluation.md  evaluation.zh-CN.md  example_results.md  example_results.zh-CN.md  framework.md  framework.zh-CN.md  i18n.md  installation.md  installation.zh-CN.md  landing_architecture.md  landing_architecture.zh-CN.md  licensing.md  licensing.zh-CN.md  open_source_readiness.md  open_source_readiness.zh-CN.md  prior_art.md  prior_art.zh-CN.md  publication_strategy.md  publication_strategy.zh-CN.md  release_process.md  release_process.zh-CN.md  research_memo.md  runtime_install.md  runtime_install.zh-CN.md  verification.md  verification.zh-CN.md
examples/: README.md
paper/: arxiv_checklist.md  main.tex  references.bib
scripts/: build_arxiv_bundle.sh  check_i18n.py  check_links.py  run_ablation.py  run_examples.py  sync_package_assets.py  validate_benchmark.py  vh_score_episode.py  vh_start.py  vh_validate.py
skills/vibeharness/: SKILL.md
vibeharness/: __init__.py  ablation.py  agent_adapters.py  benchmark.py  cli.py  codex_adapter.py  episode.py  examples.py  i18n.py  init_assets.py  links.py  paths.py  skill_distribution.py  validate.py
vibeharness/assets/: AGENTS.md  CLAUDE.md
(+45 files in other folders)
