[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeharness"
version = "0.1.0"
description = "Replayable recovery for coding-agent interventions"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "VibeHarness contributors" }
]
keywords = [
  "coding agents",
  "agent harness",
  "AI-assisted software engineering",
  "benchmarking",
  "human intervention"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.scripts]
vh = "vibeharness.cli:main"

[tool.setuptools]
packages = ["vibeharness"]

[tool.setuptools.package-data]
vibeharness = [
  "assets/AGENTS.md",
  "assets/CLAUDE.md",
  "assets/.vibeharness/*.json",
  "assets/.vibeharness/*.md",
  "assets/.vibeharness/templates/*.json",
  "assets/.vibeharness/templates/*.md",
  "assets/.claude/*.json",
  "assets/.claude/commands/*.md",
  "assets/.cursor/rules/*.mdc",
  "assets/.openhands/microagents/*.md"
]
